<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">InspectBoxV8 </string>
<string name="app_albumname">InspectBox</string>
<string name="quitter">End</string>
<string name="Cnx">Connection</string>
<string name="user">Select user</string>
<string name="team">Select shift</string>
<string name="mdp">Password</string>
<string name="inspection">Inspection</string>
<string name="parametrage">Settings</string>
<string name="url">Server-URL:</string>
<string name="clt">Client Id:</string>
<string name="cltmdp">Client password</string>
<string name="terminal">Terminal-Id</string>
<string name="ipdefaut">http://inspectbox.traq360.biz</string>
<string name="annuler">Cancel</string>
<string name="objet">Object</string>
<string name="synchroniser">Synchro</string>
<string name="commentaireici">Comments</string>
<string name="valider">Confirm</string>
<string name="photo">Picture</string>
<string name="enregistrer">Save</string>
<string name="nouvphoto">New picture</string>
<string name="supprimer">Delete</string>
<string name="voir">View</string>
<string name="retour">Back</string>
<string name="labchemininspectin">Full path</string>
<string name="labreponse">Answer</string>
<string name="uniteeponse">Unit</string>
<string name="logodescription">Traq360</string>
<string name="syncencours">Synchronising data</string>
<string name="autosyncencours">Auto Synchronising data</string>
<string name="societe">Coral. C</string>
<string name="erreur">Error</string>
<string name="mdperrone">Wrong user name or password</string>
<string name="noSynch">No recent update valable!</string>
<string name="fermer">Close</string>
<string name="champobligatoire">Required field</string>
<string name="inspectransfertok">The round was sent to the server</string>
<string name="synccomplete">Synchronisation complete</string>
<string name="erreursync">An error occurred during synchronisation</string>
<string name="inconnu">Unknown</string>
<string name="synccanceled">Synchronisation was interrupted, please try again</string>
<string name="date">Date</string>
<string name="valeur">Value</string>
<string name="reponseobligatoire">Required field</string>
<string name="datenonvalide">Date invalid</string>
<string name="attention">Attention</string>
<string name="oui">Yes</string>
<string name="ok">Close</string>
<string name="non">No</string>
<string name="selectionphotoobligatoire">Select a pricture first</string>
<string name="choixdate">Date</string>
<string name="msginspectionvideavecphotos">The inspection will not be synchronised if no value is entered. Continue?</string>
<string name="confirmsuprphoto">Delete picture?</string>
<string name="listephoto">Picture list</string>
<string name="valeurtypedec">Please enter a number</string>
<string name="valeurdoitetreentreformat">The value is outside of the tag limits:</string>
<string name="valeurdoitetreentreformat2"> - </string>
<string name="valeurdoitetreentreformat3">.Please correct your entry</string>
<string name="valeursecuriteformat">The value is outside of the tolerance limits : </string>
<string name="valeursecuriteformat2"> And </string>
<string name="valeursecuriteformat3">.Confirm entry?</string>
<string name="aucunappareilphotodetecte">No camera detected</string>
<string name="notintimezone">This shift is not active. Please select the active shift.</string>
<string name="notdayobjet">There are no inspections to carry out today</string>
<string name="objeths">This unit is out of service</string>
<string name="interditaction">Invalid entry</string>
<string name="menuoptions">Options</string>
<string name="defect">Defect</string>
<string name="menuBetrieb">In/out of service</string>
<string name="menubeenden">Close round</string>
<string name="menuanafangen">Back</string>
<string name="menufilter">Filter</string>
<string name="confirmHS">This unit will be set to out of service. Continue?</string>
<string name="confirmnnHS">This unit will be set in service. Continue??</string>
<string name="barcodecheck">Force RFID</string>
<string name="noncode">RFID unknown</string>
<string name="emptycode">Error when reading RFID. please verify your tag.</string>
<string name="filtreall">All</string>
<string name="filtreoffen">Open </string>
<string name="filtrepb">Problem</string>
<string name="nooffenbjet">No results found</string>
<string name="menuanRundgang">Interrupt</string>
<string name="menuretour">Back</string>
<string name="confirmpause">Do you want to interrup the round?</string>
<string name="confirmcloture">The round was not completed. Do you want to close the round?</string>
<string name="confirmcloturett">Do you want to close the round?</string>
<string name="menuhistorique">History</string>
<string name="menuRundgang">Interrupt</string>
<string name="interdithistoire">No history for this tag</string>
<string name="labhisto">Show history</string>
<string name="confirmpauseI">Your data will be deleted. Continue? </string>
<string name="mustcodebarre">The tag can only be inspected with RFID</string>
<string name="menuancb">Inspection could not be completed</string>
<string name="confirminacc">Impossible to inspect</string>
<string name="interditactions">Invalid entry, please select a tag</string>
<string name="clotureraison">Please select a reason for closing the round:</string>
<string name="cloturemeteo">Weather conditions</string>
<string name="cloturepanne"> Production outage</string>
<string name="clotureautre">Other</string>
<string name="cloturepanne2"> Unit stopped</string>
<string name="validaimp">The round has been closed, the tag can\'t be modified</string>
<string name="interdiclot">Invalid entry: the round has been closed</string>
<string name="nodata">No data available on the terminal. Please go to Settings</string>
<string name="interdiblokacce">Access disabled</string>
<string name="interdiblokacce2">Invalid entry: an inspection result is already available</string>
<string name="noncodeteam">Tag not in round!Please check schedule of your teams.</string>
<string name="cltmdps">Password</string>
<string name="cltmdps1">Please enter your password:</string>
<string name="wrongpass">Invalid password!</string>
<string name="menuchangepsw">Change password</string>
<string name="cltmdps2">Current password:</string>
<string name="cltmdps3">Current password:</string>
<string name="nvPass">New password</string>
<string name="nvPass2">Confirm new password</string>
<string name="passucee">Password changed!</string>
<string name="menunfc">Assign RFID Tag</string>
<string name="nfclevelchoose">Select a tag from the list!</string>
<string name="confirreedit">This tag already has an RFID Tag : </string>
<string name="confirreedit2">Overwrite current RFID Tag?</string>
<string name="nfcsuccee">RFID Tag added!</string>
<string name="confecrase">RFID Tag already exist to tag:  </string>
<string name="confecrase2"> assigned to tag:  </string>
<string name="confecrase3">Delete?</string>
<string name="gosync">Please synchronise to update RFID assignments!</string>
<string name="erresyst">RFID read error or RFID is empty, please try again</string>
<string name="erresyst2">RFID read error, please try again!</string>
<string name="menudelete">Delete data</string>
<string name="delok">Data is deleted successfully</string>
<string name="msgdel">Are you sure you want to delete the data?</string>
<string name="nocx">No connexion detected on your device!</string>
<string name="donothing">This inspection already has this RFID-tag. No action required.</string>
<string name="errortab">Undefined response type for the inspection. Please check the values in the database and synchronise again.s </string>

<string name="emptyTag">No inspection is linked to this tag. Check your tag!</string>
</resources>