<?xml version="1.0" encoding="utf-8"?>

    <menu xmlns:android="http://schemas.android.com/apk/res/android" >
<item
    android:id="@+id/menu_param"
    android:icon="@drawable/ic_action_edit"
    android:showAsAction="always"
    android:title="@string/menuoptions">
    <menu>
        <item
            android:id="@+id/menu_changepsw"
           android:showAsAction="never"
            android:title="@string/menuchangepsw" />
           <item
            android:id="@+id/menu_delete"
           android:showAsAction="never"
            android:title="@string/menudelete" />
           
		<item
            android:id="@+id/menu_nfc"
           android:showAsAction="never"
            android:title="@string/menunfc" />
        
       
        
   </menu>
</item>
</menu>
