<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parametrage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/url" />

        <EditText
            android:id="@+id/editUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="textUri"
            android:text="@string/ipdefaut" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/txtClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/clt" />

        <EditText
            android:id="@+id/editClient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/txtPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/cltmdp" />

        <EditText
            android:id="@+id/editPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/txtTerminal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/terminal" />

        <EditText
            android:id="@+id/editTerminal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="number" />
        <CheckBox
        android:id="@+id/barcodecheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:layout_marginTop="5dp"
        android:text="@string/barcodecheck" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/fermer" />

        <Button
            android:id="@+id/btnSynchroniser"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/synchroniser" />
    </RelativeLayout>

    

</RelativeLayout>