<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10sp" >
 <TextView
            android:id="@+id/nvPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/nvPass" />
    <EditText
        android:id="@+id/nv_pass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:singleLine="true" >
 
        <requestFocus />
    </EditText>
 <TextView
            android:id="@+id/nvPass2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/nvPass2" />
    <EditText
        android:id="@+id/nv_pass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>
 
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 
        <Button
            android:id="@+id/btn_cancelpass"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
            android:text="@string/annuler" />
       
 
        <Button
            android:id="@+id/btn_savepass"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
             android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/btn_cancelpass"
            android:text="@string/enregistrer" />
    </RelativeLayout>
 
</LinearLayout>