<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10sp" >
 
    <TextView
        android:id="@+id/limitdial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valeursecuriteformat"
        android:textSize="15sp" />
 
 
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
 
        <Button
            android:id="@+id/btn_cancellimit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
            android:text="@string/annuler" />
       
 
        <Button
            android:id="@+id/btn_savelimit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
             android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/btn_cancellimit"
            android:text="@string/valider" />
    </RelativeLayout>
 
</LinearLayout>